argo/olmv0/netpol-allow-all-egress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-all-egress
  namespace: operator-lifecycle-manager
spec:
  podSelector: {}
  policyTypes:
    - Egress
  egress:
    - {}
