argo/olmv0/netpol-operatorhub-catalog.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: operatorhubio-catalog
spec:
  podSelector:
    matchLabels:
      olm.catalogSource: operatorhubio-catalog
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: catalog-operator
      ports:
        - port: 50051
  egress:
    - {}
